[package]
name = "rescue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
serde_json = "1.0.0"
hex = "0.4.2"
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# log = { version = "0.4.14", default-features = false }
sp-std = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen-test = "0.3.24"
math = {verision = "0.4", path = "src/utils/winterfell-math", package="winter-math",default-features = false}
crypto = {verision = "0.4", path = "src/utils/winterfell-crypto", package="winter-crypto",default-features = false}
[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.0"

[features]
default = ["std"]
std = [
	"sp-std/std",
	# "codec/std",

    # "rand/std",
]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[profile.release]
debug = true
