[package]
name = "rescue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sp-std = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
math = {verision = "0.4", path = "src/utils/winterfell-math", package = "winter-math", default-features = false}
crypto = {verision = "0.4", path = "src/utils/winterfell-crypto", package = "winter-crypto", default-features = false}
wasm-bindgen = "0.2"
utils-core = {version = "0.4", path = "src/utils/winterfell-utils/utils/core", package = "winter-utils", default-features = false}


[features]
default = ["std"]
std = [
    "sp-std/std",
]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[profile.release]
debug = true

